--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css2?family=Azonix&display=swap" rel="stylesheet">
+
   <!-- Favicon link -->
   <link rel="icon" href="images/imc.png" type="image/png" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
